--- a/home.html
+++ b/home.html
@@ -21,7 +21,9 @@
             <h4>30.000 KZ</h4>
         </div>
         <div class="card">
-            <p class="img"><img src="imagens/fifa.png" alt="FIFA 23"></p>
+            <a href="fifa-compra.html">
+                <p class="img"><img class="fifa" src="imagens/fifa.png" alt="FIFA 23"></p>
+            </a>
             <h3>FIFA 23</h3>
             <h4>75.000 KZ</h4>
         </div>
@@ -51,7 +53,12 @@
             <p class="img"><img src="imagens/star-wars.png" alt="Boneco do star-wars"></p>
             <h3>Brinquedo do Star Wars</h3>
             <h4>10.000</h4>
-
+        </div>
+        <div class="card">
+            <p class="img"><img src="imagens/netflix.png" alt="Netflix"></p>
+            <h3>Netflix</h3>
+            <h4>5.000 KZ</h4>
+            <p>O preço de um aconta totalmente livre é de 25.000 KZ</p>
         </div>
     </div>
 </body>
