--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
             <p class="img"><img src="imagens/netflix.png" alt="Netflix"></p>
             <h3>Netflix</h3>
             <h4>5.000 KZ</h4>
-            <p>O preço de um aconta totalmente livre é de 25.000 KZ</p>
+            <p>Cada usuário é 5.000 KZ</p>
         </div>
     </div>
 </body>
