--- a/obrigado.html
+++ b/obrigado.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/compras.css">
+    <link rel="stylesheet" href="estilo/obrigado.css">
     <title>Deliveries Rocket</title>
 </head>
 <body>
     <main>
-        <div class="card">
-            <p class="img"><img src="imagens/fifa.png" alt="Fifa 23"></p>
-            <h3>Fifa 23</h3>
-        </div>
-        <a class="bt-compra" href="#"><p>Adquirir produto de 75.000 KZ</p></a>
+        <p class="img"><img src="imagens/check.png" alt="Feito"></p>
+        <h2>Compra feita com sucesso</h2>
+        <a href="#"><p>Continuar</p></a>
     </main>
 </body>
 </html>
