Atualização do site

--- a/fifa-compra.html
+++ b/fifa-compra.html
@@ -13,7 +13,7 @@
             <p class="img"><img src="imagens/fifa.png" alt="Fifa 23"></p>
             <h3>Fifa 23</h3>
         </div>
-        <a class="bt-compra" href="#"><p>Adquirir produto de 75.000 KZ</p></a>
+        <a class="bt-compra" href="obrigado.html"><p>Adquirir produto de 75.000 KZ</p></a>
     </main>
 </body>
 </html>
