--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
             <p class="img">
                 <img src="imagens/gift-card.png" alt="Gift Card">
             </p>
-            <h3>Gft card de PS4</h3>
-            <h4>6.000 KZ</h4>
+            <h3>Gift card de PS4</h3>
+            <h4>8.000 KZ</h4>
         </div>
         <div class="card">
             <p class="img"><img src="imagens/nft.png" alt="NFT"></p>
