--- a/obrigado.html
+++ b/obrigado.html
@@ -9,9 +9,27 @@
 </head>
 <body>
     <main>
-        <p class="img"><img src="imagens/check.png" alt="Feito"></p>
+        <a href="home.html">
+            <p class="sucefull"><img src="imagens/check.png" alt="Feito"></p>
+        </a>
         <h2>Compra feita com sucesso</h2>
-        <a href="#"><p>Continuar</p></a>
+        <h4 class="alert">Dê uma olhada nos produtos a baixo</h4>
+        <div class="card">
+            <p class="img"><img src="imagens/nft.png" alt="NFT"></p>
+            <h3>NFT</h3>
+            <h4>5.000.000 KZ</h4>
+        </div>
+        <div class="card">
+            <p class="img"><img src="imagens/star-wars.png" alt="Star Wars"></p>
+            <h3>B. Star Wars</h3>
+            <h4>10.000 KZ</h4>
+        </div>
+        <div class="card">
+            <p class="img"><img src="imagens/netflix.png" alt="netflix"></p>
+            <h3>Netflix</h3>
+            <h4>5.000 KZ</h4>
+        </div>
+        <!--<a href="#"><p>Continuar</p></a>-->
     </main>
 </body>
 </html>
