--- a/home.html
+++ b/home.html
@@ -9,57 +9,73 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
-            <p class="img"><img src="imagens/iphone.png" alt="Iphone 11"></p>
-            <h3>Iphone 11</h3>
-            <h4>250.000 KZ</h4>
-            <p>Mais acessórios: 265.000 KZ</p>  
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/adidas.png" alt="Roupa da Adidas"></p>
-            <h3>Fato Olimpico da Adidas</h3>
-            <h4>30.000 KZ</h4>
-        </div>
-        <div class="card">
-            <a href="fifa-compra.html">
-                <p class="img"><img class="fifa" src="imagens/fifa.png" alt="FIFA 23"></p>
-            </a>
-            <h3>FIFA 23</h3>
-            <h4>75.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img">
-                <img src="imagens/gift-card.png" alt="Gift Card">
-            </p>
-            <h3>Gift card de PS4</h3>
-            <h4>8.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/nft.png" alt="NFT"></p>
-            <h3>NFT</h3>
-            <h4>5.000.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/nike.png" alt="Roupa da Nike"></p>
-            <h3>Fato Olimpico da Nike</h3>
-            <h4>30.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/puma.png" alt="Roupa da Puma"></img></p>
-            <h3>Fato Olimpico da Puma</h3>
-            <h4>30.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/star-wars.png" alt="Boneco do star-wars"></p>
-            <h3>Brinquedo do Star Wars</h3>
-            <h4>10.000</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/netflix.png" alt="Netflix"></p>
-            <h3>Netflix</h3>
-            <h4>5.000 KZ</h4>
-            <p>Cada usuário é 5.000 KZ</p>
-        </div>
+        <a href="iphone-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/iphone.png" alt="Iphone 11"></p>
+                <h3>Iphone 11</h3>
+                <h4>180.000 KZ</h4>
+                <p>+ acessórios: 200.000 KZ</p>
+            </div>
+        </a>
+        <a href="adidas001.html">
+            <div class="card">
+                <p class="img"><img src="imagens/adidas.png" alt="Roupa da Adidas"></p>
+                <h3>Fato Olimpico da Adidas</h3>
+                <h4>20.000 KZ</h4>
+            </div>
+        </a>
+        <a href="fifa-compra.html">
+            <div class="card">
+                    <p class="img"><img class="fifa" src="imagens/fifa.png" alt="FIFA 23"></p>
+                <h3>FIFA 23</h3>
+                <h4>45.000 KZ</h4>
+            </div>
+        </a>
+        <a href="gift-compra.html">
+            <div class="card">
+                <p class="img">
+                    <img src="imagens/gift-card.png" alt="Gift Card">
+                </p>
+                <h3>Gift card de PS4</h3>
+                <h4>8.000 KZ</h4>
+            </div>
+        </a>
+        <a href="nft-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/nft.png" alt="NFT"></p>
+                <h3>NFT</h3>
+                <h4>8.000.000 KZ</h4>
+            </div>
+        </a>
+        <a href="nike001.html">
+            <div class="card">
+                <p class="img"><img src="imagens/nike.png" alt="Roupa da Nike"></p>
+                <h3>Fato Olimpico da Nike</h3>
+                <h4>20.000 KZ</h4>
+            </div>
+        </a>
+        <a href="puma.html">
+            <div class="card">
+                <p class="img"><img src="imagens/puma.png" alt="Roupa da Puma"></img></p>
+                <h3>Fato Olimpico da Puma</h3>
+                <h4>20.000 KZ</h4>
+            </div>
+        </a>
+        <a href="b-star-wars.html">
+            <div class="card">
+                <p class="img"><img src="imagens/star-wars.png" alt="Boneco do star-wars"></p>
+                <h3>Brinquedo do Star Wars</h3>
+                <h4>8.500</h4>
+            </div>
+        </a>
+        <a href="netflix-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/netflix.png" alt="Netflix"></p>
+                <h3>Netflix</h3>
+                <h4>5.000 KZ</h4>
+                <p>Cada usuário é 5.000 KZ</p>
+            </div>
+        </a>
     </div>
 </body>
 </html>
