--- a/home.html
+++ b/home.html
@@ -8,6 +8,14 @@
     <title>Deliveries Rocket</title>
 </head>
 <body>
+    <div class="nav">
+        <a href="#">Roupas</a>
+        <a href="#">Telemoveis</a>
+        <a href="#">Imagens</a>
+        <a href="#">Cards</a>
+        <a href="#">Decorações</a>
+        <a href="#">Cosmeticos</a>
+    </div>
     <div class="container">
         <a href="iphone-compra.html">
             <div class="card">
