--- a/info.html
+++ b/info.html
@@ -25,6 +25,7 @@
         <p><strong>Miguel Angelo:</strong> Contabilista</p>
         <p><strong>Sténio Gaspar:</strong> Programador, fundador e chefe</p>
         <p><strong>Valter Costa:</strong> Programador, gestor de recursos humanos e chefe</p>
+        <p><strong>Abdel Chama:</strong> Fornecedor</p>
         <h2>Economia da Deliveries Rocket (Contabilista):</h2>
         <p><strong>Forma de pagamento do salário:</strong> Contra recibo assinado pelo funcionario, pagamos mensalmente, o valor do salário depende do lucro das vendas</p>
         <p><strong>Forma de obtenção do dinheiro:</strong> Dependencia do banco central</p>
@@ -32,7 +33,7 @@
         <p>Semana 1- Electronicos</p>
         <p>Semana 2- Vestuario</p>
         <p>Semana 3- Cosmeticos</p>
-        <p>Semana 4- ?</p>
+        <p>Semana 4- Reabastecimento do stock</p>
     </main>
 </body>
 </html>
