--- a/home.html
+++ b/home.html
@@ -8,6 +8,20 @@
     <title>Deliveries Rocket</title>
 </head>
 <body>
+    <header>
+        <h1>Deliveries Rocket</h1>
+        <p>De tudo um pouco</p>
+    </header>
+     
+    <i id="burguer" onclick="clickMenu()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg></i>
+    <menu id="itens">
+            <a href="#" class="used"><p>Home</p></a>
+            <a href="#"><p>Formúlarios</p></a>
+            <a href="#"><p>Pagínas de inicío</p></a>
+            <a href="#"><p>Pagínas de vídeo</p></a>
+    </menu>
     <div class="container">
         <a href="iphone-compra.html">
             <div class="card">
@@ -77,5 +91,14 @@
             </div>
         </a>
     </div>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else{
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
