--- a/login-a.html
+++ b/login-a.html
@@ -13,32 +13,32 @@
             <legend><strong>Login de comprador</strong></legend>
             <form action="home.html" method="post" autocomplete="off">
                 <p>
-                    <label id="nomee" for="inome">Nome na plataforma</label>
+                    <label id="nomee" for="inome">NOME NA PLATAFORMA</label>
                     <br>
                     <input type="text" name="nome" id="inome" required maxlength="15" minlength="5" placeholder="Máximo 15 caracteres">
                 </p>
 
                 <p>
-                    <label for="iemail">Email</label>
+                    <label for="iemail">EMAIL</label>
                     <br>
                     <input type="email" name="email" id="iemail" required maxlength="30" minlength="4" placeholder="seuemail@gmail.com">
                 </p>
                 
                 <p>
-                    <label for="isenha">Senha</label>
+                    <label for="isenha">SENHA</label>
                     <br>
                     <input type="password" name="senha" id="isenha" required minlength="8" placeholder="+ de 8 caracteres">
                 </p>
 
                 <p>
-                    <label for="icartao">Dados do Cartão</label>
+                    <label for="icartao">DADOS DO CARTÃO</label>
                     <br>
                     <input type="text" name="cartao" id="icartao" required maxlength="19" minlength="4" placeholder="0000-0000-0000-0000">
                 </p>
 
                 <p>
-                    <label for="idata"><strong>Data de Nascimento</strong></label>
-                    <input type="date" name="data" id="idata">
+                    <label for="idata"><strong>DATA DE NASCIMENTO</strong></label>
+                    <input type="date" name="data" id="idata" required>
                 </p>
 
                 <fieldset>
@@ -56,8 +56,8 @@
                 </fieldset>
 
                 <p>
-                    <input id="confirmar" type="submit" value="Confirmar">
-                    <input id="cancelar" type="reset" value="Cancelar">
+                    <input id="confirmar" type="submit" value="CONFIRMAR">
+                    <input id="cancelar" type="reset" value="REINICIAR OS DADOS">
                 </p>
             </form>
         </fieldset>
