--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-        <h1>Deliveries Rocket</h1>
+        <h1><a href="info.html" target="_blank">Deliveries Rocket</a></h1>
         <p>De tudo um pouco</p>
     </header>
      
