--- a/iphone-compra.html
+++ b/iphone-compra.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/iphone.png" alt="Iphone"></p>
             <h3>Iphone 11</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir produto de 180.000 KZ</p></a>
     </main>
 </body>
