--- a/obrigado.html
+++ b/obrigado.html
@@ -8,28 +8,73 @@
     <title>Deliveries Rocket</title>
 </head>
 <body>
-    <main>
-        <a href="home.html">
-            <p class="sucefull"><img src="imagens/check.png" alt="Feito"></p>
+    <div class="container">
+        <h1 class="obg"><a class="back" href="home.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+          </svg></a> Compra feita com sucesso! <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-check-fill" viewBox="0 0 16 16">
+            <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-1.646-7.646-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L8 8.293l2.646-2.647a.5.5 0 0 1 .708.708z"/>
+          </svg></h1>
+        <h2>Dê uma ohada nos outros produtos</h2>
+        <p id="link"></p>
+        <a href="iphone-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/iphone.png" alt="Iphone 11"></p>
+                <h3>Iphone 11</h3>
+                <h4>180.000Kz</h4>
+                <p>+ Acessórios 200.000Kz</p>
+            </div>
         </a>
-        <h2>Compra feita com sucesso</h2>
-        <h4 class="alert">Dê uma olhada nos produtos a baixo</h4>
-        <div class="card">
-            <p class="img"><img src="imagens/nft.png" alt="NFT"></p>
-            <h3>NFT</h3>
-            <h4>5.000.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/star-wars.png" alt="Star Wars"></p>
-            <h3>B. Star Wars</h3>
-            <h4>10.000 KZ</h4>
-        </div>
-        <div class="card">
-            <p class="img"><img src="imagens/netflix.png" alt="netflix"></p>
-            <h3>Netflix</h3>
-            <h4>5.000 KZ</h4>
-        </div>
-        <!--<a href="#"><p>Continuar</p></a>-->
-    </main>
+    
+        <a href="netflix-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/netflix.png" alt="Netflix"></p>
+                <h3>Netflix</h3>
+                <h4>5.000Kz</h4>
+            </div>
+        </a>
+        <a href="puma.html">
+            <div class="card">
+                <p class="img"><img src="imagens/puma.png" alt="Fato Olimpico da Puma"></p>
+                <h3>Fato Olimpico da Puma</h3>
+                <h4>20.000Kz</h4>
+            </div>
+        </a> 
+        <a href="nike001.html">
+            <div class="card">
+                <p class="img"><img src="imagens/nike.png" alt="Fato olimpico da Nike"></p>
+                <h3>Fato Olimpico da Nike</h3>
+                <h4>20.000Kz</h4>
+            </div>
+        </a>
+        <a href="adidas001.html">
+            <div class="card">
+                <p class="img"><img src="imagens/adidas.png" alt="Fato olimpico da Adidas"></p>
+                <h3>Fato Olimpico da Adidas</h3>
+                <h4>20.000Kz</h4>
+            </div>
+        </a>
+        <a href="b-star-wars.html">
+            <div class="card">
+                <p class="img"><img src="imagens/star-wars.png" alt="Star Wars"></p>
+                <h3>Brinquedo do Star Wars</h3>
+                <h4>8.500Kz</h4>
+            </div>
+        </a>
+        <a href="gift-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/gift-card.png" alt="Gift Card"></p>
+                <h3>Gift Card da PS4</h3>
+                <h4>8.000Kz</h4>
+            </div>
+        </a>
+        <a href="fifa-compra.html">
+            <div class="card">
+                <p class="img"><img src="imagens/fifa.png" alt="Fifa 23"></p>
+                <h3>FIFA 23</h3>
+                <h4>45.000Kz</h4>
+            </div>
+        </a>
+
+    </div>
 </body>
 </html>
