--- a/gift-compra.html
+++ b/gift-compra.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/gift-card.png" alt="Gift Card"></p>
             <h3>Gift Card de PS4</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir produto de 8.000 KZ</p></a>
     </main>
 </body>
