--- a/home.html
+++ b/home.html
@@ -19,9 +19,9 @@
       </svg></i>
     <menu id="itens">
             <a href="#" class="used"><p>Home</p></a>
-            <a href="#"><p>Formúlarios</p></a>
-            <a href="#"><p>Pagínas de inicío</p></a>
-            <a href="#"><p>Pagínas de vídeo</p></a>
+            <a href="#"><p>Promoções</p></a>
+            <a href="#"><p>Novos Produto</p></a>
+            <a href="#"><p>Mais Vendidos</p></a>
     </menu>
         <a href="iphone-compra.html">
             <div class="card">
