--- a/nft-compra.html
+++ b/nft-compra.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/nft.png" alt="NFT"></p>
             <h3>NFT</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir produto de 8.000.000 KZ</p></a>
     </main>
 </body>
