--- a/puma.html
+++ b/puma.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/puma.png" alt="Fato da Puma"></p>
             <h3>F. da Puma</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir o produto de 20.000 KZ</p></a>
     </main>
 </body>
