--- a/adidas001.html
+++ b/adidas001.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/adidas.png" alt="Adidas"></p>
             <h3>F. Olimpico da Adidas</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir produto se 20.000</p></a>
     </main>
 </body>
