--- a/b-star-wars.html
+++ b/b-star-wars.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/star-wars.png" alt="Star Wars"></p>
             <h3>B. de Star Wars</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="#"><p>Adquirir produto de 8.500 KZ</p></a>
     </main>
 </body>
