--- a/fifa-compra.html
+++ b/fifa-compra.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/fifa.png" alt="Fifa 23"></p>
             <h3>Fifa 23</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir produto de 75.000 KZ</p></a>
     </main>
 </body>
