--- a/netflix-compra.html
+++ b/netflix-compra.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/netflix.png" alt="netflix"></p>
             <h3>netflix</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir produto de 5.000 KZ</p></a>
     </main>
 </body>
