--- a/nike001.html
+++ b/nike001.html
@@ -13,6 +13,7 @@
             <p class="img"><img src="imagens/nike.png" alt="Fato da Nike"></p>
             <h3>F. Olimpico da Nike</h3>
         </div>
+        <p class="input"><input type="number" name="number" id="inumber" max="10" min="1"></p>
         <a class="bt-compra" href="obrigado.html"><p>Adquirir Produto de 20.000 KZ</p></a>
     </main>
 </body>
