--- a/login-cliente.html
+++ b/login-cliente.html
@@ -13,13 +13,13 @@
             <legend><strong>Login de Cliente</strong></legend>
             <form action="home.html" method="post" autocomplete="off">
                 <p>
-                    <input type="text" name="nome" id="inome" placeholder="NOME NA PLATAFORMA" required maxlength="15" minlength="3">
+                    <input type="text" name="nome" id="inome" placeholder="NOME NA PLATAFORMA" required maxlength="17" minlength="3">
                 </p>
                 <p>
                     <input type="iemail" name="email" id="iemail" placeholder="EMAIL" maxlength="30" required>
                 </p>
                 <p>
-                    <input type="password" name="senha" id="isenha" placeholder="SENHA" minlength="8">
+                    <input type="password" name="senha" id="isenha" placeholder="SENHA" minlength="8" required>
                 </p>
                 <p>
                     <input type="text" name="cartao" id="icartao" placeholder="DADOS DO CARTÃO" required maxlength="19">
