--- a/video-play.html
+++ b/video-play.html
@@ -10,32 +10,24 @@
 <body>
     <main>
         <div class="video"><h1>Aqui vai ficar os vídeos</h1></div>
-        <div class="escolha">
-            <p>
-                <a class="curs" href="#">Aula 01-O que vamos aprender</a>
-                <br>
-                <a class="curs" href="#">Aula 02-Primeiros passos</a>
-                <br>
-                <a class="curs" href="#">Aula 03-Elaboração da matriz S.W.O.T</a>
-                <br>
-                <a class="curs" href="#">Aula 04-Entender as necessidades</a>
-                <br>
-                <a class="curs" href="#">Aula 05-Elaboração de um plano de Marketing</a>
-                <br>
-                <a class="curs" href="#">Aula 06-Como criar um relacionamento com os clientes</a>
-                <br>
-                <a class="curs" href="#">Aula 07-Experiência</a>
-                <br>
-                <a class="curs" href="#">Aula 08-Produto</a>
-                <br>
-                <a class="curs" href="#">Aula 09-Serviço</a>
-                <br>
-                <a href="#">Aula 10-Fim do curso</a>
-                <br>
-            </p> 
-        </div>
+        
         <div class="desc">
             <h1>Aqui vai ficar a descrição</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas consequuntur rerum beatae distinctio facilis optio quasi nulla perspiciatis nesciunt quos vitae amet id, alias eum recusandae quibusdam dolor tenetur laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur similique dignissimos porro unde quam laborum, tempore sed minima natus sunt nihil quisquam soluta, iusto perferendis? Eius optio tempora cum consectetur?</p>
+        </div>
+        <div class="escolha">
+            <p>
+                <p class="link"><a class="curs" href="#">Aula 01-O que vamos aprender</a></p>
+                <p class="link"><a class="curs" href="#">Aula 02-Primeiros passos</a></p>
+                <p class="link"><a class="curs" href="#">Aula 03-Elaboração da matriz S.W.O.T</a></p>
+                <p class="link"><a class="curs" href="#">Aula 04-Entender as necessidades</a></p>
+                <p class="link"><a class="curs" href="#">Aula 05-Elaboração de um plano de Marketing</a></p>
+                <p class="link"><a class="curs" href="#">Aula 06-Como criar um relacionamento com os clientes</a></p>
+                <p class="link"><a class="curs" href="#">Aula 07-Experiência</a></p>
+                <p class="link"><a class="curs" href="#">Aula 08-Produto</a></p>
+                <p class="link"><a class="curs" href="#">Aula 09-Serviço</a></p>
+                <p class="link"><a href="#">Aula 10-Fim do curso</a></p>
+            </p> 
         </div>
     </main>
 </body>
