--- a/curso-guia.html
+++ b/curso-guia.html
@@ -8,24 +8,16 @@
     <title>Deliveries Rocket</title>
 </head>
 <body>
-    <menu>
-            <ul>
-                <li><a href="#">Novos cursos</a></li>
-                <li><a href="#">Cursos mais vendidos</a></li>
-                <li><a href="#">Cursos em promoção</a></li>
-            </ul>
-    </menu>
     <main>
-        <div class="card">
-            <span>14/11/2022</span>
-            <a href="#"><p>Marketing Digital</p></a> 
-            <p>AULAS: 45</p>
-            <p>EXERCÍCOS: 12</p>
-        </div>
-        <br>
-        <div class="card">
-            <a href="#"><p>Dropshoping</p></a>
-        </div>
+        <a href="https://google.com">
+            <div class="card">
+                <p class="date">15/11/2022</p>
+                <p class="link">Curso de Inglês</p>
+                <p>
+                    AULAS:15
+                </p>
+            </div>
+        </a>
     </main>
 </body>
 </html>
