--- a/curso-guia.html
+++ b/curso-guia.html
@@ -9,12 +9,22 @@
 </head>
 <body>
     <main>
+        <h1>Escolhe um curso e embarque em uma nova aventura</h1>
         <a href="https://google.com">
-            <div class="card">
+            <div class="card" id="ingles"> 
                 <p class="date">15/11/2022</p>
                 <p class="link">Curso de Inglês</p>
                 <p>
                     AULAS:15
+                </p>
+            </div>
+        </a>
+        <a href="https://google.com">
+            <div class="card" id="mar-digital">
+                <p class="date">15/11/2022</p>
+                <p class="link">Curso de Marketing Digital</p>
+                <p>
+                    AULAS:11
                 </p>
             </div>
         </a>
