--- a/video-play.html
+++ b/video-play.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <main>
-        <div class="video">
+        <div class="video"></div>
+        <div class="desc" id="itens">
+            <i>Mostrar descrição</i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia omnis aut molestiae nisi sunt, alias accusantium autem harum possimus recusandae. Architecto excepturi cumque modi tempora et aspernatur earum perspiciatis quaerat? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta iure quisquam beatae architecto quaerat error natus cumque blanditiis, commodi sit incidunt quasi est, et rerum illo amet voluptatem a assumenda. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur quisquam fuga, harum deleniti nisi quidem odit. Veritatis, voluptates at. Ipsa, sequi magnam. Excepturi fuga exercitationem totam nam voluptates illo dolorem.</p>
         </div>
         <div class="escolha">
             <p><a href="#"><img src="imagens/curso-de-mark-digital-flayer.jpeg" alt="marketing digital">Por que aprender Marketing Digital</a></p>
@@ -19,5 +22,15 @@
             <p><a href="#"> <img src="imagens/curso-de-mark-digital-flayer.jpeg" alt="marketing digital">Marketing de conteúdo</a></p>
         </div>
     </main>
+
+    <script>
+        function clickMenu() {
+             if (itens.style.display == 'block') {
+                itens.style.display = 'none' 
+             } else{
+                 itens.style.display = 'block'
+             }
+        } 
+     </script>
 </body>
 </html>
