--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
         </div>
         <div class="apr">
             <div class="art">
-            <p>Arte Digital</p>
-            <p>Arte de tipografia</p>
+            <h1>Arte Digital</h1>
+            <h1>Arte de tipografia</h1>
         </div>
         </div>
         <!--
@@ -53,6 +53,14 @@
                 Neste momento a plataforma conta com +150 artes e +70 logotipos. Temos disponíveis +50 artes grátuitas e, +100 artes pagas. Temos também disponível +70 logotipos, +20 logotipos são gratuitos e, +50 logotipos são pagos.
             </p>
         </div>-->
+        <div class="redes-sociais">
+            <h1>Siga-nos nas nossas redes sociais</h1>
+            <p id="instagram"><a href="#" id="insta">Instagram</a></p>
+            <p id="youtube"><a href="#" id="tube">YouTube</a></p>
+            <p id="tiktok"><a href="#" id="tok">TikTok</a></p>
+            <p id="twitter"><a href="#" id="tter">Twitter</a></p>
+            <p id="facebook"><a href="#" id="face">Facebook</a></p>
+        </div>
     </main>
 </body>
 </html>
