--- a/home.html
+++ b/home.html
@@ -47,19 +47,12 @@
             <h1>Arte de tipografia</h1>
         </div>
         </div>
-        <!--
-        <div class="hist">
-            <p> 
-                Neste momento a plataforma conta com +150 artes e +70 logotipos. Temos disponíveis +50 artes grátuitas e, +100 artes pagas. Temos também disponível +70 logotipos, +20 logotipos são gratuitos e, +50 logotipos são pagos.
-            </p>
-        </div>-->
         <div class="redes-sociais">
-            <h1>Siga-nos nas nossas redes sociais</h1>
-            <p id="instagram"><a href="#" id="insta">Instagram</a></p>
-            <p id="youtube"><a href="#" id="tube">YouTube</a></p>
-            <p id="tiktok"><a href="#" id="tok">TikTok</a></p>
-            <p id="twitter"><a href="#" id="tter">Twitter</a></p>
-            <p id="facebook"><a href="#" id="face">Facebook</a></p>
+            <p><a href="#" class="icon"><img src="imagens/youtube.svg" alt="YouTube"> YouTube</a></p>
+            <p><a href="#" class="icon"><img src="imagens/instagram.svg" alt="Instagram icon"> Instagram</a></p>
+            <p><a href="#" class="icon"><img src="imagens/tiktok.svg" alt="TikTok icon"> TikTok</a></p>
+            <p><a href="#" class="icon"><img src="imagens/twitter.svg" alt="Twitter icon"> Twitter</a></p>
+            <p><a href="#" class="icon"><img src="imagens/facebook.svg" alt="twitter icon"> Facebook</a></p>
         </div>
     </main>
 </body>
