--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/home.css">
-    <title>Tecno Space- Home</title>
+    <title>Tecno Space| Home</title>
 </head>
 <body>
     <menu>
@@ -39,15 +39,20 @@
                 <h1>+20</h1>
                 <P>Logotipos gratuitos</P>
             </div>
-            <h1>Os tipos de arte disponíveis na plataforma</h1>
+            <h1>Sobre as nossas artes e logotipos:</h1>
         </div>
         <div class="apr">
             <div class="art">
-            <h1>Arte Digital</h1>
-            <h1>Arte de tipografia</h1>
-        </div>
+                <h1>Arte Digital</h1>
+                <h1>Arte de tipografia</h1>
+            </div>
+            <div class="art" id="logo">
+                <h1>Logotipos para empresas</h1>
+                <h1></h1>
+            </div>
         </div>
         <div class="redes-sociais">
+            <h3>Siga-nos e acompanhe-nos nas nossas redes sociais:</h3>
             <p><a href="#" class="icon"><img src="imagens/youtube.svg" alt="YouTube"> YouTube</a></p>
             <p><a href="#" class="icon"><img src="imagens/instagram.svg" alt="Instagram icon"> Instagram</a></p>
             <p><a href="#" class="icon"><img src="imagens/tiktok.svg" alt="TikTok icon"> TikTok</a></p>
