--- a/home.html
+++ b/home.html
@@ -51,6 +51,13 @@
                 <h1></h1>
             </div>
         </div>
+        <div class="resultado">
+            <h1>Olhe os nossos números</h1>
+            <div class="info-b">
+                <h1>+2</h1>
+                <p>empresas satisfeitas com o nosso serviço</p>
+            </div>
+        </div>
         <div class="redes-sociais">
             <h3>Siga-nos e acompanhe-nos nas nossas redes sociais:</h3>
             <p><a href="#" class="icon"><img src="imagens/youtube.svg" alt="YouTube"> YouTube</a></p>
