--- a/home.html
+++ b/home.html
@@ -47,15 +47,8 @@
                 <h1>Arte de tipografia</h1>
             </div>
             <div class="art" id="logo">
-                <h1>Logotipos para empresas</h1>
-                <h1></h1>
-            </div>
-        </div>
-        <div class="resultado">
-            <h1>Olhe os nossos números</h1>
-            <div class="info-b">
-                <h1>+2</h1>
-                <p>empresas satisfeitas com o nosso serviço</p>
+                <h1>Logotipos com siglas e nome da instituição</h1>
+                <h1>Logotipos com Símbolos e ícones</h1>
             </div>
         </div>
         <div class="redes-sociais">
