--- a/home.html
+++ b/home.html
@@ -51,6 +51,26 @@
                 <h1>Logotipos com Símbolos e ícones</h1>
             </div>
         </div>
+        <div class="alert">
+            <h1>O que nossos clientes dizem</h1>
+        </div>
+        <div class="criticas">
+            <div class="criticas-b">
+                <p class="img"><img src="imagens/user.png" alt="User"> Aurilene Gaspar</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore quia et ipsa doloremque quasi. Minima porro at consequatur!</p>
+            </div>
+            <div class="criticas-b">
+                <p class="img"><img src="imagens/user.png" alt="User">Lukenny Gaspar</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore quia et ipsa doloremque quasi. Minima porro at consequatur!</p>
+            </div>
+        </div>
+        <div class="reclame">
+            <div class="reclame-b">
+                <h1>Artigos e notícias</h1>
+                <p>Esteja a par de todas as novidades</p>
+                <a href="#"><p>Ver os Artigos e Notícias</p></a>
+            </div>
+        </div>
         <div class="redes-sociais">
             <h3>Siga-nos e acompanhe-nos nas nossas redes sociais:</h3>
             <p><a href="#" class="icon"><img src="imagens/youtube.svg" alt="YouTube"> YouTube</a></p>
