--- a/home.html
+++ b/home.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="estilos/home.css">
     <title>Tecno Space| Home</title>
 </head>
@@ -51,10 +55,8 @@
                 <h1>Logotipos com Símbolos e ícones</h1>
             </div>
         </div>
-        <div class="alert">
-            <h1>O que nossos clientes dizem</h1>
-        </div>
         <div class="criticas">
+            <h1>O que nossos clientes dizem</h1>
             <div class="criticas-b">
                 <p class="img"><img src="imagens/user.png" alt="User"> Aurilene Gaspar</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore quia et ipsa doloremque quasi. Minima porro at consequatur!</p>
