--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
             <a href="#" id="home">Home</a>
             <a href="#">Loja</a>
             <a href="#">Blog</a>
+            <a href="#">Contacte-nos</a>
             <a href="#">Inscrever-se</a>
             <a href="#">Login</a>
         </p>
@@ -26,7 +27,7 @@
             <h1>TECNO SPACE</h1>
         </div>
         <div class="info">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque modi, aspernatur similique cumque et quaerat, reprehenderit praesentium quam incidunt qui corrupti soluta laudantium accusantium, nam sapiente consectetur quas facilis ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam dolorum consequatur adipisci a optio alias minima fuga corporis placeat eaque aperiam culpa odit corrupti eius facilis non, inventore mollitia sed.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque modi, aspernatur similique cumque et quaerat, reprehenderit praesentium quam incidunt qui corrupti soluta laudantium accusantium, nam sapiente consectetur quas facilis ea?</p>
             <div class="info-b">
                 <h1>+150</h1>
                 <P>Artes</P>
