--- a/home.html
+++ b/home.html
@@ -12,8 +12,16 @@
         <p>
             <a href="#">Home</a>
             <a href="#">Loja</a>
-            <a href="#"></a>
+            <a href="#">Blog</a>
+            <a href="#">Contacte-nos</a>
+            <a href="#">Sobre nós</a>
         </p>
     </menu>
+    <main>
+        <div class="img-fundo">
+            <h1>GOLDEN NEWT</h1>
+            <p>Destinada à jovens e empresas que precisam de ajuda nas suas propagandas</p>
+        </div>
+    </main>
 </body>
 </html>
