--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
         </a></div>
         <div class="menu">
             <p>
-                <a id="used" href="#">Home</a>
-                <a href="#">Loja</a>
+                <a id="used" href="home.html">Home</a>
+                <a href="loja.html">Loja</a>
                 <a href="#">Inscreva-se</a>
                 <a href="#">Login</a>
                 <a href="#">Contacte-nos</a>
