--- a/loja.html
+++ b/loja.html
@@ -15,8 +15,8 @@
         </a></div>
         <div class="menu">
             <p>
-                <a href="#">Home</a>
-                <a id="used" href="#">Loja</a>
+                <a href="home.html">Home</a>
+                <a id="used" href="loja.html">Loja</a>
                 <a href="#">Inscreva-se</a>
                 <a href="#">Login</a>
                 <a href="#">Contacte-nos</a>
@@ -28,12 +28,52 @@
             <h1>Garanta ja a sua propaganda!</h1>
         </div>
         <div class="category">
-            <h1>Novidades</h1>
+            <h1>Categorias</h1>
             <div class="category-b">
                 <a href="#"><p><img src="imagens/Pacote Básico.png" alt="Pacote Básico"></p></a>
             </div>
             <div class="category-c">
                 <a href="#"><p><img src="imagens/Pacote ecletus.png" alt="Pacote Básico"></p></a>
+            </div>
+        </div>
+        <div class="mais-vendidos">
+            <h1>Novidades</h1>
+            <div class="mais-vendidos-box">
+                <div class="mais-vendidos-dropbox">
+                    <p><a href="#"><img src="imagens/Pacote Básico.png" alt="Pacote Básico"></a></p>
+                    <div class="info-compra">
+                        <p><strong>12.000Kz</strong></p>
+                        <a href="#"><p>Comprar pacote</p></a>
+                    </div>
+                </div>
+                <div class="mais-vendidos-dropbox-b">
+                    <p><a href="#"><img src="imagens/Pacote ecletus.png" alt="Pacote Básico"></a></p>
+                    <div class="info-compra">
+                        <p><strong>25.000Kz</strong></p>
+                        <a href="#"><p>Comprar pacote</p></a>
+                    </div>
+                </div>
+                <div class="mais-vendidos-dropbox">
+                    <p><a href="#"><img src="imagens/pacote master.png" alt="Pacote Básico"></a></p>
+                    <div class="info-compra">
+                        <p><strong>34.000Kz</strong></p>
+                        <a href="#"><p>Comprar pacote</p></a>
+                    </div>
+                </div>
+                <div class="mais-vendidos-dropbox-b">
+                    <p><a href="#"><img src="imagens/pacote amazona.png" alt="Pacote Básico"></a></p>
+                    <div class="info-compra">
+                        <p><strong>80.000Kz</strong></p>
+                        <a href="#"><p>Comprar pacote</p></a>
+                    </div>
+                </div>
+                <div class="mais-vendidos-dropbox">
+                    <p><a href="#"><img src="imagens/pacote rei.png" alt="Pacote Básico"></a></p>
+                    <div class="info-compra">
+                        <p><strong>184.000Kz</strong></p>
+                        <a href="#"><p>Comprar pacote</p></a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
