--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                 <h2>Design gráfico</h2>
             </div>
             <div class="info-b">
-                <h2>Artes</h2>
+                <h2>Cinematográfia</h2>
             </div>
         </div>    
 
