--- a/compra-basico.html
+++ b/compra-basico.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/compra.css">
+    <link rel="stylesheet" href="estilos/compras-basico.css">
     <title>Pittacus</title>
 </head>
 <body>
     <main>
-        <div class="voltar"><a href="#">Voltar</a></div>
+        <div class="voltar"><a href="loja.html">Voltar</a></div>
         <h1>Comprar Pacote Básico <span>12.000Kz</span></h1>
         <div class="produto">
 
