--- a/loja.html
+++ b/loja.html
@@ -40,43 +40,43 @@
             <h1>Novidades</h1>
             <div class="mais-vendidos-box">
                 <div class="mais-vendidos-dropbox">
-                    <p><a href="#"><img src="imagens/Pacote Básico.png" alt="Pacote Básico"></a></p>
+                    <p><a href="compra-basico.html"><img src="imagens/Pacote Básico.png" alt="Pacote Básico"></a></p>
                     <div class="info-compra">
                         <h3>Pacote Básico</h3>
                         <p><strong>12.000Kz</strong></p>
-                        <a href="#"><p>Comprar pacote</p></a>
+                        <a href="compra-basico.html"><p>Comprar pacote</p></a>
                     </div>
                 </div>
                 <div class="mais-vendidos-dropbox-b">
-                    <p><a href="#"><img src="imagens/Pacote ecletus.png" alt="Pacote Básico"></a></p>
+                    <p><a href="compra-ecletus.html"><img src="imagens/Pacote ecletus.png" alt="Pacote Básico"></a></p>
                     <div class="info-compra">
                         <h3>Pacote Ecletus</h3>
                         <p><strong>25.000Kz</strong></p>
-                        <a href="#"><p>Comprar pacote</p></a>
+                        <a href="compra-ecletus.html"><p>Comprar pacote</p></a>
                     </div>
                 </div>
                 <div class="mais-vendidos-dropbox">
-                    <p><a href="#"><img src="imagens/pacote master.png" alt="Pacote Básico"></a></p>
+                    <p><a href="compra-master.html"><img src="imagens/pacote master.png" alt="Pacote Básico"></a></p>
                     <div class="info-compra">
                         <h3>Pacote Master</h3>
                         <p><strong>34.000Kz</strong></p>
-                        <a href="#"><p>Comprar pacote</p></a>
+                        <a href="compra-master.html"><p>Comprar pacote</p></a>
                     </div>
                 </div>
                 <div class="mais-vendidos-dropbox-b">
-                    <p><a href="#"><img src="imagens/pacote amazona.png" alt="Pacote Básico"></a></p>
+                    <p><a href="compra-amazona.html"><img src="imagens/pacote amazona.png" alt="Pacote Básico"></a></p>
                     <div class="info-compra">
                         <h3>Pacote Amazona</h3>
                         <p><strong>80.000Kz</strong></p>
-                        <a href="#"><p>Comprar pacote</p></a>
+                        <a href="compra-amazona.html"><p>Comprar pacote</p></a>
                     </div>
                 </div>
                 <div class="mais-vendidos-dropbox">
-                    <p><a href="#"><img src="imagens/pacote rei.png" alt="Pacote Básico"></a></p>
+                    <p><a href="compra-rei.html"><img src="imagens/pacote rei.png" alt="Pacote Básico"></a></p>
                     <div class="info-compra">
                         <h3>Pacote Rei</h3>
                         <p><strong>184.000Kz</strong></p>
-                        <a href="#"><p>Comprar pacote</p></a>
+                        <a href="compra-rei.html"><p>Comprar pacote</p></a>
                     </div>
                 </div>
             </div>
