--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/home.css">
-    <title>Pittacus</title>
+    <link rel="stylesheet" href="estilos/home.css" media="screen">
+    <title>Pittacus | Home</title>
 </head>
 <body>
     <menu>
@@ -26,7 +26,7 @@
     <main>
         <div class="apr-titulo-desc">
             <h1>Garanta já a sua propaganda</h1>
-            <a class="link" href="#"><p>Ir para loja</p></a>
+            <a class="link" href="loja.html"><p>Ir para loja</p></a>
         </div>
 
         <div class="desc-emp-number">
