--- a/loja.html
+++ b/loja.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/loja.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Pittacus</title>
+    <title>Pittacus | Loja</title>
 </head>
 <body>
     <menu>
