--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <main>
         <div class="box">
-            <h1>Quem é o utilizador?</h1>
+            <h1>Quem está a assistir?</h1>
             <div class="img">
-                <a href="#">
+                <a id="link" href="index02.html">
                     <p><img src="imagens/Pacote Rei 300X250.png" alt="Foto da Best"></p>
                 </a>
                 <h3>Best</h3>
-                <a href="index02.html" id="confirmar"><p>Escolher</p></a>
+                <a href="erro404.html" id="confirmar"><p>Editar</p></a>
             </div>
         </div>
     </main>
