--- a/index02.html
+++ b/index02.html
@@ -17,17 +17,32 @@
         </div>
         <div class="feed">
             <h1>Vídeos</h2>
-            <div class="video"></div>
-            <div class="video"></div>
-            <div class="video"></div>
-            <div class="video"></div>
+            <a href="#">
+                <div id="primeiro" class="video"></div>
+            </a>
+            <a href="#">
+                <div id="segundo" class="video"></div>
+            </a>
+            <a href="#">
+                <div id="terceiro" class="video"></div>
+            </a>
+            <a href="#">
+                <div id="quarto" class="video"></div>
+            </a>
         </div>
         <div class="fy">
             <h1>Fotos</h2>
-            <div class="fotos"></div>
-            <div class="fotos"></div>
-            <div class="fotos"></div>
+            <a href="#">
+                <div id="um" class="fotos"></div>
+            </a>
+            <a href="#">
+                <div id="dois" class="fotos"></div>
+            </a>
+            <a href="#">
+                <div id="tres" class="fotos"></div>
+            </a>
         </div>
+        <a href="index.html" id="voltar"><p>Voltar</p></a>
     </main>
 </body>
 </html>
