--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="box">
             <h1>Quem está a assistir?</h1>
             <div class="img">
-                <a id="link" href="index02.html">
-                    <p><img src="imagens/Pacote Rei 300X250.png" alt="Foto da Best"></p>
-                </a>
+                <p><a id="link" href="index02.html">
+                    <img src="imagens/Design sem nome (6).png" alt="Foto da Best">
+                </a></p>
                 <h3>Best</h3>
                 <a href="erro404.html" id="confirmar"><p>Editar</p></a>
             </div>
