--- a/index02.html
+++ b/index02.html
@@ -11,19 +11,19 @@
     <main>
         <div class="box">
             <div class="text">
-                <h1>Obrigado!</h1>
-                <p id="dedicatoria">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, tempora error! Aspernatur enim sed rerum</p>
+                <h1>Te Amo!</h1>
+                <p id="dedicatoria">Ficaste ao meu lado nos momentos que eu mais precisei. Juntos, vivemos momentos inesquecíveis. Então, obrigado best, por tudo que você fazes por mim.</p>
             </div>
         </div>
         <div class="feed">
             <h1>Vídeos</h2>
-            <a href="#">
+            <a href="video001.html">
                 <div id="primeiro" class="video"></div>
             </a>
-            <a href="#">
+            <a href="video002.html">
                 <div id="segundo" class="video"></div>
             </a>
-            <a href="#">
+            <a href="video003.html">
                 <div id="terceiro" class="video"></div>
             </a>
             <a href="#">
@@ -31,14 +31,14 @@
             </a>
         </div>
         <div class="fy">
-            <h1>Fotos</h2>
-            <a href="#">
+            <h1>Perguntas & Respostas</h2>
+            <a href="resposta001.html">
                 <div id="um" class="fotos"></div>
             </a>
-            <a href="#">
+            <a href="resposta002.html">
                 <div id="dois" class="fotos"></div>
             </a>
-            <a href="#">
+            <a href="resposta003.html">
                 <div id="tres" class="fotos"></div>
             </a>
         </div>
