--- a/index02.html
+++ b/index02.html
@@ -12,7 +12,7 @@
         <div class="box">
             <div class="text">
                 <h1>Te Amo!</h1>
-                <p id="dedicatoria">Ficaste ao meu lado nos momentos que eu mais precisei. Juntos, vivemos momentos inesquecíveis. Então, obrigado best, por tudo que você fazes por mim.</p>
+                <p id="dedicatoria">Ficaste ao meu lado nos momentos que eu mais precisei. Juntos, vivemos momentos inesquecíveis. Então, obrigado best, por tudo que fazes por mim.</p>
             </div>
         </div>
         <div class="feed">
